# PackSPEC

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  SPEC2026-PLAN.md  analyze_log.py  config.py.example  main.py.example  pack-spec.py  pack_spec.py  pack_utils.py  pyproject.toml  run-cli.py  set_env.sh.example  setup_venv.sh
.github/workflows/: test.yml
docs/: architecture.md  exception-handling.md  extensibility.md  interface.md
pack_spec/: pack_config.py  pack_spec.py  pack_utils.py
scripts/: cal_score.py  cal_score_minimal.sh  collect_cover.sh  collect_perf_report.sh  collect_profiles.sh.template  get_system_info.sh  kill-sepc.sh  merge_profile.sh.template  perf_report_to_csv.py  send_md_message.py  send_md_message.template  setup-spec.sh  setup-spec06.sh  setup-spec17.sh
scripts/625_inputgen/: PackSPEC_625inputgen.cfg
scripts/parallel/: run-1.sh  run-2.sh  run-3.sh  test-rate.sh
spec_env/: setup_spec2006env.sh  setup_spec2017env.sh  setup_spec2026env.sh
src/pack_spec/: __init__.py  pack_config.py  pack_spec.py  pack_utils.py  spec_2006_driver.py  spec_2017_driver.py  spec_driver.py
tests/: check_tests.py  conftest.py  pack_test.sh  setup_spec06.py  setup_spec17.py  spec06_test_x86.py  spec17_test_riscv.py  spec17_test_x86.py  test.sh  test_pack_config.py  test_pack_spec.py  test_pack_spec_dry.py  test_pack_utils.py  test_run_cli.py  test_spec_2006_driver_dry.py  test_spec_2017_driver_dry.py  test_spec_driver.py  test_spec_driver_dry.py
tests/spec06_cfgs/: x86_llvm19_novec.cfg
tests/spec06_tests/: test06_pack_benches.py  test06_pack_benches_profile_gen.py  test06_pack_binarys.py
tests/spec17_cfgs/: x86_llvm19_novec.cfg
tests/spec2006/: run_test.sh  set_test_env.sh  test_spec_2006_driver.py  test_spec_driver.py  test_utils.py
(+6 files in other folders)
