[project]
name = "packspec"
description = "PackSPEC - SPEC CPU 基准测试自动化打包与运行工具 / Automated SPEC CPU Benchmark Packaging and Execution Tool"
version = "0.3.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/pack_spec"]
omit = [
    "tests/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_also = [
    "if __name__",
]
